ingress/ingress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress
  namespace: ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: ingress
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
