ingress/faction-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/send-timeout: "3600"
    nginx.org/websocket-services: "faction-hasura"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: faction-ingress
  namespace: default
spec:
  rules:
    - host: www.faction.localhost
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: faction-console
              servicePort: 80
          - path: /api/v1/auth/(.*)
            backend:
              serviceName: faction-auth
              servicePort: 5000
          - path: /api/(v1/graphql.*)
            backend:
              serviceName: faction-hasura
              servicePort: 8080
