ingress/hasura-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/send-timeout: "3600"
    nginx.org/websocket-services: "faction-hasura"
  name: faction-hasura
  namespace: default
spec:
  rules:
    - host: www.faction.localhost
      http:
        paths:
          - backend:
              serviceName: faction-hasura
              servicePort: 8080
            path: /api/(v1/graphql.*)
